# rust-streaming-example

./: Cargo.toml
src/consumer/: main.rs
src/producer/: main.rs
