[package]
name = "rust-streaming-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[dependencies]
iggy = "0.0.92"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
